--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,6 @@
-body {
-    background-color: #1da1f2; /*primary color*/
-}
+/*body {
+    background-color: #1da1f2; !*primary color*!
+}*/
 
 /* Palette URL: http://paletton.com/#uid=73u0u0ktQWvhTXbn+WWJoUYRy-5 */
 
