--- a/app/scss/custom.scss
+++ b/app/scss/custom.scss
@@ -1,2 +1,2 @@
 $enable-shadows: true;
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
