LoadingGif.gif.exe.bin.bat.jpg

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1da1f2;
+    background-color: #1DA3F2;
 }
 
 /* Palette URL: http://paletton.com/#uid=73u0u0ktQWvhTXbn+WWJoUYRy-5 */
